# yolo_test

./: CMakeLists.txt  README.md  best.pt
includes/auto_aim/: Camera.h  Detector.h
includes/camera_include/: IMVApi.h
src/: Camera.cpp  Detector.cpp  main.cpp
